--- a/DeCastro_Lab_4.ipynb
+++ b/DeCastro_Lab_4.ipynb
@@ -6,28 +6,23 @@
     "collapsed": true
    },
    "source": [
-    "## MESA lab"
+    "## MESA lab: An exploration in agent-based models using forest fire simulation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Import the necessary packages: "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "No module named 'windrose'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-b1e5cd2969e1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcm\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mcm\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mmath\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpi\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mwindrose\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mWindroseAxes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m: No module named 'windrose'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import random\n",
     "from numpy.random import uniform\n",
@@ -48,8 +43,7 @@
     "\n",
     "import pandas as pd\n",
     "import matplotlib.cm as cm\n",
-    "from math import pi\n",
-    "from windrose import WindroseAxes"
+    "from math import pi"
    ]
   },
   {
@@ -58,12 +52,12 @@
     "collapsed": true
    },
    "source": [
-    "model explanation "
+    "The Python package MESA aids in the modeling, analysis, and visualization of agent-based data, making it a perfect candidate for use in modeling forest fires. An agent based model requires agents as well as an environment for the agents to interact with. Here, we'll define trees as agents, with attributes \"young\" and \"old\", and set them in a grid at elevations of 500 and 1500 meters. We also set rules for the fire spreading. -That is, we set how the fire will spread from a burning tree to its neighbors based on their elevation and age. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -101,7 +95,7 @@
     "                    neighbor.condition = \"On Fire\"\n",
     "            self.condition = \"Burned\"\n",
     "        if self.condition == \"On Fire\" and self.agent_type==\"Old\" and self.elevation==\"500\":\n",
-    "            neighbors = self.model.grid.get_neighbors(self.pos, 7) # the rule for old trees is 5 neighboring pixels will burn\n",
+    "            neighbors = self.model.grid.get_neighbors(self.pos, 7) \n",
     "            for neighbor in neighbors:\n",
     "                if neighbor.condition == \"Fine\":\n",
     "                    neighbor.condition = \"On Fire\"\n",
@@ -121,17 +115,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "Now we can define the model, which assigns tree density, the size of the tree plot, and the fraction of old and young trees in the plot. We also need to set up a data collector, which will keep track of which trees have burned and their locations as the model runs through its steps. "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -182,17 +176,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "Now we can define a step within the model and tell the model when to stop. "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -224,7 +218,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -234,6 +228,15 @@
     "#results1.plot()\n",
     "#plt.xlim(0,30)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
