--- a/DeCastro_Lab_4.ipynb
+++ b/DeCastro_Lab_4.ipynb
@@ -688,7 +688,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's look at some maps. We can see in the burned tree map that most of the area is covered. Nearly all of the tree have burnt, with the largest patch remaining being far from where the fire was initiated"
+    "Let's look at some maps. We can see in the burned tree map that most of the area is covered. Nearly all of the tree have burnt, with the largest patch remaining being far from where the fire was initiated. Most of the living trees are clustered in the lower left-hand corner, with just a sprinkling of hearty souls still standing in the middle of the forest. "
    ]
   },
   {
